# cirs_girona_cala_viuda

./: CMakeLists.txt  README.md  package.xml
data/: full_dataset.db3  metadata.yaml
launch/: play_data.l  play_data.launch.py
msg/: Depth.msg  Imu.msg  LinkquestDvl.msg  RangeImageBeam.msg
rviz2/: cala_viuda.rviz  sparus.urdf
